# lite_int

./: LICENSE  README.md  input.txt  output.txt  pyproject.toml
src/lite-pack/: __init__.py  core.py
